2005-01-20  Dan Winship  <danw@novell.com>

	* glib/Marshaller.cs (StringFormat): Calls String.Format and makes
	sure the output has no unescaped "%"s. (For wrapping printf-style
	unmanaged methods with String.Format-style managed ones.)

	* gtk/MessageDialog.custom (MessageDialog): use it. #71405. Also,
	use gtk_message_dialog_new_with_markup by default, and add an
	overloaded ctor that lets you use the non-markup version.

	* gtk/Gtk.metadata: hide the GtkMessageDialog ctors so we don't
	get ellipsis warnings about them.

	* sample/GtkDemo/DemoApplicationWindow.cs:
	* sample/GtkDemo/DemoDialog.cs: simplify the MessageDialog usage;
	don't need to call String.Format separately now.

2005-01-18  Mike Kestner  <mkestner@novell.com>

	* generator/Method.cs : deal with owned retvals.
	* generator/ReturnValue.cs : add Owned prop.
	* gnome/Gnome.metadata : mark Thumbnail.ScaleDownPixbuf return owned.
	[Fixes #71335]

2005-01-18  Mike Kestner  <mkestner@novell.com>

	* gtk/gtk-api.raw : regen.
	* parser/gapi2xml.pl : deal with G_GNUC_PRINTF.

2005-01-17  Mike Kestner  <mkestner@novell.com>

	* gtk/Style.custom : add Light, LightColors, Mid, MidColors, Dark,
	and DarkColors.
	* gtk/glue/style.c : add get_light and get_dark

2005-01-17  Mike Kestner  <mkestner@novell.com>

	* gtk/Gtk.metadata : hide Stock.
	* gtk/Makefile.am : add new file.
	* gtk/StockManager.cs : stock item management methods.

2005-01-14  Dan Winship  <danw@novell.com>

	* glib/Object.cs (ConnectDefaultHandlers): Don't call a signal's
	ConnectionMethod if it's already been called for a superclass of
	the current class. #71278

2005-01-13  Zac Bowling  <zac@zacbowling.com>

	* makefile.win32 : new "gac" target for automatic for gacutil calls,
	added copying of gtk-sharp.snk to each folder being built to fix fresh
	builds and after cleaning, added support for switching C#
	compilers, and added handling of spaces in filenames for mcs builds