@@ -123,7 +123,8 @@ Accel paths are set to &lt;Actions&gt;/group-name/action-name.
         <summary>Looks up an action in the action group by name.</summary>
         <param name="action_name">a <see cref="T:System.String" />,  the name of the action</param>
         <returns>a <see cref="T:Gtk.Action" />,  or <see langword="null" /> if no action by that name exists</returns>
-        <remarks></remarks>
+        <remarks>
+        </remarks>
       </Docs>
     </Member>
     <Member MemberName="Add">
@@ -245,7 +246,8 @@ Therefore you must either set the accel path yourself with <see cref="P:Gtk.Acti
       <Docs>
         <summary>Sets the translation domain and uses dgettext() for translating the label and tooltip of <see cref="T:Gtk.ActionEntry" />s added by <see cref="M:Gtk.ActionGroup.AddActions()" />.</summary>
         <returns>a <see cref="T:System.String" /></returns>
-        <remarks></remarks>
+        <remarks>
+        </remarks>
       </Docs>
     </Member>
     <Member MemberName="Add">
@@ -309,6 +311,22 @@ Therefore you must either set the accel path yourself with <see cref="P:Gtk.Acti
         <returns>a <see cref="T:Gtk.Action[]" /></returns>
         <remarks>
         </remarks>
+      </Docs>
+    </Member>
+    <Member MemberName="Item">
+      <MemberSignature Language="C#" Value="public Gtk.Action Item { get; };" />
+      <MemberType>Property</MemberType>
+      <ReturnValue>
+        <ReturnType>Gtk.Action</ReturnType>
+      </ReturnValue>
+      <Parameters>
+        <Parameter Name="name" Type="System.String" />
+      </Parameters>
+      <Docs>
+        <summary>Returns the <see cref="T:Gtk.Action" /> with the specified name.</summary>
+        <param name="name">a <see cref="T:System.String" /></param>
+        <returns>a <see cref="T:Gtk.Action" /></returns>
+        <remarks>See <see cref="M:Gtk.ActionGroup.GetAction" /> for more info.</remarks>
       </Docs>
     </Member>
   </Members>
