@@ -1,3 +1,7 @@
+2005-01-23  Jeroen Zwartepoorte  <jeroen@xs4all.nl>
+
+	* gtk/ActionGroup.custom: Add a string index for the GetAction method.
+
 2005-01-20  Dan Winship  <danw@novell.com>
 
 	* glib/Marshaller.cs (StringFormat): Calls String.Format and makes
